--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Clean Contacts</string>
-    <string name="err_getting_contacts">Error getting contacts</string>
+    <string name="err_getting_contacts">Error getting contact</string>
+    <string name="detail">Detail</string>
 
 </resources>
