--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Clean Contacts</string>
     <string name="err_getting_contacts">Error getting contact</string>
     <string name="detail">Detail</string>
+    <string name="mobile">Mobile</string>
 
 </resources>
